--- a/weather_map.html
+++ b/weather_map.html
@@ -26,6 +26,14 @@
             height: 550px;
             align-self: center;
         }
+        .carousel-control-prev-icon,
+        .carousel-control-next-icon{
+            background-color: black; /* Replace #ff0000 with your desired color */
+        }
+        .carousel-indicators {
+            background-color: black;
+            opacity: 35%;
+        }
     </style>
 </head>
 <body>
@@ -38,7 +46,39 @@
     <div class="row  justify-content-center">
         <div class="row w-50">
             <div class="col md-8">
-                <div id="slides-only" class="carousel slide" data-bs-ride="carousel">
+                <div id="slides-with-indicators" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-indicators">
+                            <button class="active"
+                            type="button"
+                            data-bs-target="#slides-with-indicators"
+                            data-bs-slide-to="0"
+                            aria-current="true"
+                            aria-label="Slide 1"></button>
+                            <button class="active"
+                            type="button"
+                            data-bs-target="#slides-with-indicators"
+                            data-bs-slide-to="1"
+                            aria-current="true"
+                            aria-label="Slide 2"></button>
+                            <button class="active"
+                            type="button"
+                            data-bs-target="#slides-with-indicators"
+                            data-bs-slide-to="2"
+                            aria-current="true"
+                            aria-label="Slide 3"></button>
+                            <button class="active"
+                            type="button"
+                            data-bs-target="#slides-with-indicators"
+                            data-bs-slide-to="3"
+                            aria-current="true"
+                            aria-label="Slide 4"></button>
+                            <button class="active"
+                            type="button"
+                            data-bs-target="#slides-with-indicators"
+                            data-bs-slide-to="4"
+                            aria-current="true"
+                            aria-label="Slide 5"></button>
+                        </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="card text-center my-4 d-block w-100">
@@ -96,6 +136,22 @@
                             </div>
                         </div>
                     </div>
+                    <button
+                            class="carousel-control-prev"
+                            type="button"
+                            data-bs-target="#slides-with-indicators"
+                            data-bs-slide="prev"
+                    ><span class="carousel-control-prev-icon" aria-hidden="false"></span>
+                    <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button
+                            class="carousel-control-next"
+                            type="button"
+                            data-bs-target="#slides-with-indicators"
+                            data-bs-slide="next"
+                    ><span class="carousel-control-next-icon" aria-hidden="false"></span>
+                    <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
             </div>
         </div>
